flux/apps/demo-portal/ingress/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-portal
  namespace: demo-portal
spec:
  parentRefs:
    - name: public
      namespace: cilium-ingress-gateway
      sectionName: http-k8s-home-arpa
  hostnames:
    - demo-portal.k8s.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo-portal
          port: 80
